--- a/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
+++ b/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
@@ -75,7 +75,7 @@
                 </div>
                 <div class="col-4">
                   <label for="minmax-buttons" id="quote-label"> {{'gis.quotation.vehicle_model' | translate}}</label>
-                  <p-dropdown  [options]="filteredVehicleModel" optionLabel="name"
+                  <p-dropdown  [options]="vehicleModelDetails" optionLabel="name"
                   [filterBy]="'name'"  [filter]="true"
                   (onChange)="onVehicleModelSelected($event);"></p-dropdown>
                   <!-- <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input"
