--- a/src/app/features/entities/components/entity/view-entity/entity-other-details/entity-other-details.component.html
+++ b/src/app/features/entities/components/entity/view-entity/entity-other-details/entity-other-details.component.html
@@ -712,7 +712,7 @@
               </tr>
               <tr>
                 <td>Country</td>
-                <th>{{ partyAccountDetails?.prospectDto?.countryId }}</th>
+                <th>{{ partyAccountDetails?.prospectDto?.country | titlecase }}</th>
               </tr>
               <tr>
                 <td>Postal Address</td>
@@ -732,7 +732,7 @@
               </tr>
               <tr>
                 <td>Town</td>
-                <th>{{ partyAccountDetails?.prospectDto?.townId }}</th>
+                <th>{{ partyAccountDetails?.prospectDto?.town | titlecase }}</th>
               </tr>
               <tr>
                 <td>Physical Address</td>
