--- a/src/app/features/fms/components/receipt-capture/receipt-capture.component.html
+++ b/src/app/features/fms/components/receipt-capture/receipt-capture.component.html
@@ -1,7 +1,8 @@
 <div class="container">
   <div class="breadcrumb-custom">
-    {{ "fms.receipting.finance" | translate }} > CB-Receipting >
-    {{ "base.Receipting" | translate }} >
+    {{ "fms.receipting.finance" | translate }} >
+    {{ "fms.receipting.cbReceipting" | translate }}>
+    {{ "fms.receipting.receipting" | translate }}>
     <span class="breadcrumb-text">{{
       "fms.receipting.receiptCapture" | translate
     }}</span>
