VQ-3270: Ability to Search a Quote by Client, or Quotation Number; VQ-3301: Ability to Filter Quotes by Status(Quotation Inquiry Screen)

--- a/src/app/features/entities/components/client/new-client/new-client2.component.html
+++ b/src/app/features/entities/components/client/new-client/new-client2.component.html
@@ -448,6 +448,7 @@
                       </label>
 
                       <ngx-intl-tel-input
+                        [cssClass]="'form-control form-control-md mb-1'"
                         id="smsNumber"
                         [preferredCountries]="preferredCountries"
                         [enableAutoCountrySelect]="true"
@@ -499,6 +500,7 @@
                       </label>
 
                       <ngx-intl-tel-input
+                        [cssClass]="'form-control form-control-md mb-1'"
                         id="phoneNumber"
                         [cssClass]="'form-control'"
                         [preferredCountries]="preferredCountries"
