--- a/src/app/features/entities/components/client/new-client/new-client.component.css
+++ b/src/app/features/entities/components/client/new-client/new-client.component.css
@@ -90,7 +90,7 @@
   /* padding-right: 10px; */
 }
 
-::ng-deep .ngx-intl-tel-input {
+/* ::ng-deep .ngx-intl-tel-input {
   width: 100%;
   display: block;
 }
@@ -98,9 +98,9 @@
 ::ng-deep .iti {
   width: 100%;
   display: block;
-}
+} */
 
-::ng-deep ngx-intl-tel-input .iti--container {
+/* ::ng-deep ngx-intl-tel-input .iti--container {
   width: 100%;
 }
 
@@ -112,7 +112,7 @@
   padding: 3px;
   font-size: 14px;
   color: #000;
-}
+} */
 
 /* Style for the country dropdown button */
 ::ng-deep .iti__flag-container {
@@ -144,5 +144,32 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+
+#zipDropdown{
+  height: 31px;
+  border-radius: 4px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  border: 1px solid rgba(0, 0, 0, 0.20);
+  color: #000;
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+#zip-quote-input{
+  border-radius: 4px;
+   border: 1px solid rgba(0, 0, 0, 0.20);
+  /* background: #FFF; */
+  color: #000;
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
 }
 
