Added a acknowledgement slip component for slip preview

--- a/src/app/features/fms/components/pd-slip-preview/pd-slip-preview.component.html
+++ b/src/app/features/fms/components/pd-slip-preview/pd-slip-preview.component.html
@@ -1,5 +1,32 @@
 <div class="container-fluid">
-  <h5 class="text-primary" style="padding-top: 10px">Receipt summary</h5>
+  <div class="row me-4">
+    <div class="col-8">
+      <app-dynamic-breadcrumb
+        [breadCrumbItems]="[
+      {
+        label: 'FMS',
+        url: '/home/fms',
+      },
+      {
+        label: this.translate.instant('fms.receipting.cbReceipting'),
+        url: '/home/fms/',
+      },
+      {
+        label: this.translate.instant('fms.receipting.receipting'),
+        url: '/home/fms/',
+      },
+      {
+        label:this.translate.instant('fms.receipting.slipPreview'),
+        url: ''
+      }
+    ]"
+      >
+      </app-dynamic-breadcrumb>
+    </div>
+  </div>
+  <h5 class="text-primary" style="padding-top: 5px">
+    {{ "fms.receipting.acknowledgementSlip" | translate }}
+  </h5>
   <div class="receipt-section">
     <ngx-doc-viewer
       #docViewerIframe
@@ -9,8 +36,37 @@
     >
     </ngx-doc-viewer>
   </div>
+  <h6 class="text mt-2 ms-5">
+    {{ "fms.receipting.select" | translate }}
+  </h6>
+  <div class="radiobtn">
+    <div class="form-check">
+      <input
+        class="form-check-input"
+        type="radio"
+        name="printStatus"
+        id="printYes"
+        (change)="onPrintStatusChange('yes')"
+      />
+      <label class="form-check-label" for="flexRadioDefault1">{{
+        "fms.receipting.printed" | translate
+      }}</label>
+    </div>
+    <div class="form-check">
+      <input
+        class="form-check-input"
+        type="radio"
+        name="printStatus"
+        id="printNo"
+        (change)="onPrintStatusChange('no')"
+      />
+      <label class="form-check-label" for="flexRadioDefault2">
+        {{ "fms.receipting.unPrinted" | translate }}
+      </label>
+    </div>
+  </div>
   <!-- Action Buttons -->
-  <div class="btn-actions">
+  <!-- <div class="btn-actions">
     <div class="btn-back">
       <button type="button" class="btn btn-link" (click)="onBack()">
         Back
@@ -24,7 +80,7 @@
       >
         Print
       </button>
-      <!-- <button type="button" class="btn-primary" (click)="onNext()">Next</button> -->
+     
     </div>
-  </div>
+  </div> -->
 </div>
